[package]
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
name = "lochnes"
description = "A toy NES emulator in Rust"
repository = "https://github.com/kylewlacy/lochnes"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
bitflags = "1.3.2"
enum-kinds = "0.5.1"
structopt = "0.3.26"
sdl2 = "0.35.2"
log = "0.4.17"
stderrlog = "0.5.1"

[features]
default = ["easter-egg"]
easter-egg = []

[profile.dev]
opt-level = 2

[profile.release]
debug = true
