[package]
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
name = "lochnes"
description = "A toy NES emulator in Rust"
repository = "https://github.com/kylewlacy/lochnes"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitflags = "1.3.2"
enum-kinds = "0.5.1"
structopt = "0.3.26"
sdl2 = "0.35.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[features]
default = ["easter-egg"]
easter-egg = []

[profile.dev]
opt-level = 2

[profile.release]
debug = true
